[package]
name = "euler"
version = "0.2.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]
description = "Mathematics library for 3D computer graphics"
documentation = "https://docs.rs/euler"
repository = "https://github.com/alteous/euler"
homepage = "https://github.com/alteous/euler"
readme = "README.md"
keywords = ["math", "3D", "glsl", "graphics"]
license = "MIT/Apache-2.0"

[dependencies]
approx = "0.1.1"
cgmath = { features = ["mint"], version = "0.15" }
mint = "0.4.2"
